WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163859
WebGLRenderingContextBase.texSubImage2D() should use a union instead of overloading
https://bugs.webkit.org/show_bug.cgi?id=163859
Summary
WebGLRenderingContextBase.texSubImage2D() should use a union instead of overl...
Chris Dumez
Reported
2016-10-22 16:26:54 PDT
WebGLRenderingContextBase.texSubImage2D() should use a union instead of overloading: -
https://www.khronos.org/registry/webgl/specs/latest/1.0/#5.14
Attachments
Patch
(27.51 KB, patch)
2016-10-22 19:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-10-22 19:00:44 PDT
Created
attachment 292525
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-22 19:56:24 PDT
Comment on
attachment 292525
[details]
Patch Clearing flags on attachment: 292525 Committed
r207724
: <
http://trac.webkit.org/changeset/207724
>
WebKit Commit Bot
Comment 3
2016-10-22 19:56:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug